--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   toast: ^0.1.5
   provider: ^4.3.2
   ant_icons: ^1.0.0
+  common_utils: ^1.2.1
 
 dev_dependencies:
   flutter_test:
