--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   provider: ^4.3.2
   ant_icons: ^1.0.0
   common_utils: ^1.2.1
+  fluro: ^1.6.3
+  fluttertoast: ^7.0.2
+  page_transition: ^1.1.6
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
@@ -50,8 +54,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
